--- a/css/modal.css
+++ b/css/modal.css
@@ -268,6 +268,11 @@
   cursor: pointer;
 }
 
+.modal-icon svg {
+  min-width: 24px;
+  min-height: 24px;
+}
+
 .small {
   min-height: 2vh;
   max-height: 4vh;
